--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
           'wss://seed.bitcoiner.me',
           'wss://this.piston.rocks',
           'wss://node.steem.ws',
-        ]
+          'wss://steemd.minnowsupportproject.org',
+          'wss://steemd.privex.io',
+          'wss://steemd.steemitstage.com',
+           ]
       });
 
       var states = {};
